--- a/front/package.json
+++ b/front/package.json
@@ -12,10 +12,13 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.10.15",
-    "@types/react-router-dom": "^5.3.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/x-date-pickers": "^5.0.16",
+    "@types/react-router-dom": "^5.3.3",
+    "dayjs": "^1.11.7",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
@@ -40,9 +43,9 @@
     "clean-webpack-plugin": "^4.0.0",
     "cpy-cli": "^3.1.1",
     "css-loader": "^6.7.1",
+    "esbuild-loader": "^2.20.0",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
-    "esbuild-loader": "^2.20.0",
     "history": "^5.3.0",
     "html-webpack-plugin": "^5.5.0",
     "https-proxy-agent": "^5.0.0",
