--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,9 @@
     "test": "jest --coverage -i",
     "test:watch": "jest --watch",
     "test:update": "npm run test -- -u",
+    "prestart": "cpy config/config-local.json config/ --rename=config.json",
     "start": "webpack-dashboard -- webpack serve --mode development --hot --open",
+    "prebuild": "cpy config/config-build.json config/ --rename=config.json",
     "build": "webpack --mode production --config ./webpack.config.prod.js",
     "lint": "eslint --cache --ext tsx,jsx,js,ts src",
     "lint:fix": "npm run lint -- --fix"
