updated logger config

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,13 +1,5 @@
 logging:
-  level:
-    ROOT: ERROR
-    com.corn: DEBUG
-    org.springframework: WARN
-    org.hibernate: WARN
-    org.hibernate.SQL: error
-    com.hazelcast: DEBUG
-  pattern:
-    console: "%-5d{yyyy-MM-dd HH:mm:ss.SSS} %highlight(%-5level): %cyan(%logger{25}).%yellow(%M) %m%n"
+  config: classpath:logback-dev.xml
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/db
