--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
 		<jacoco.version>0.8.10</jacoco.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.language>java</sonar.language>
+		<sonar.coverage.exclusions>src/main/java/com/corn/trade/TradeApplication.java,src/test/java/**/*.*,src/main/java/com/corn/trade/dto/**/*.*,src/main/java/com/corn/trade/entity/**/*.*,src/main/java/com/corn/trade/exception/**/*.*,src/main/java/com/corn/trade/repository/**/*.*,src/main/java/com/corn/trade/configuration/**/*.*,,src/main/java/com/corn/trade/controller/**/*.*</sonar.coverage.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
