--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,16 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>4.25.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
