--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.corn</groupId>
     <artifactId>trade</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <name>Trade</name>
     <description>Trade app</description>
     <properties>
@@ -104,7 +104,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.corn.trade.App</mainClass>
+                            <mainClass>com.corn.trade.Trade</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
