--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>com.interactivebrokers</groupId>
             <artifactId>tws-api</artifactId>
-            <version>9.73.01-SNAPSHOT</version>
+            <version>10.19.04</version>
         </dependency>
         <dependency>
             <groupId>com.github.weisj</groupId>
